--- a/index.html
+++ b/index.html
@@ -5,10 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet"><title>PORTAFOLIO</title>
 </head>
 <body>
-    <p>zZZzZzzZZZzzzZzZZz</p>
-    
+    <header>
+
+        <nav class="nav">
+            <a href="#" class="logo">Logo</a>
+            <ul class="nav-menu">
+                <li class="nav-menu-item">
+                    <a href="#" class="nav-menu-link">Blog</a>
+                </li>
+                <li class="nav-menu-item">
+                    <a href="#" class="nav-menu-link">Videos</a>
+                </li>
+                <li class="nav-menu-item">
+                    <a href="#" class="nav-menu-link">Sobre mi</a>
+                </li>
+                <li class="nav-menu-item">
+                    <a href="#" class="nav-menu-link">Contacto</a>
+                </li>
+            </ul>
+            
+        </nav>
+
+    </header>
 </body>
 </html>
