--- a/index.html
+++ b/index.html
@@ -4,19 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--LINK CSS-->
     <link rel="stylesheet" href="index.css">
+    <!--GOOGLE FONTS-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet"><title>PORTAFOLIO</title>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200;1,300&display=swap" rel="stylesheet"><title>PORTAFOLIO</title>
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@1,100&family=Source+Code+Pro:wght@200&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-
-        <nav class="nav">
+        <nav class="nav" id="nav">
             <a href="#" class="logo">Logo</a>
             <ul class="nav-menu">
                 <li class="nav-menu-item">
@@ -32,9 +35,107 @@
                     <a href="#" class="nav-menu-link">Contacto</a>
                 </li>
             </ul>
-            
         </nav>
-
     </header>
-</body>
+    <h2 class="acerca">Acerca de Mi</h2>
+    <div class="about">
+        <div class="about-name">
+            <h2>Hola, Mi Nombre es Gonzalo.</h2>
+            <h2>Soy desarrollador Front End</h2>
+            <h3>Soy un estudiante de ingeniería de sistemas apasionado
+                por el desarrollo web, backend y desarollo de software.
+            </h3>
+        </div>
+        <div class="about-img">
+            <img src="img/Designer.svg" alt="">
+        </div>
+    </div>
+    <h2 class="SKILLS">Habilidades</h2><br><br>
+    <div class="container">
+        <div  class="dedo">
+            <img src="img/dedo.png" alt="">
+        </div>
+        <div class="container-skills">
+                <div class="div-skill">
+                    <h3>HTML5</h3>
+                    <img src="img/HTML.png" alt="" srcset="">               
+                </div>
+                <div class="div-skill">
+                    <h3>CSS3</h3>
+                    <img src="img/CSS.png" alt="" srcset="">            
+                </div>
+                <div class="div-skill">
+                    <h3>JavaScript</h3>
+                    <img src="img/JAVA.png" alt="" srcset="">
+                </div>
+                <div class="div-skill">
+                    <h3>PHP</h3>
+                    <img src="img/PHP.png" alt="" srcset="">
+                </div>
+                <div class="div-skill">
+                    <h3>AndroidStudio</h3>
+                    <img src="img/ANDROID.png" alt="" srcset="">
+                </div>
+                <div class="div-skill">
+                    <h3>SQLServer</h3>
+                    <img src="img/SQL.png" alt="" srcset="">
+                </div>
+                <div class="div-skill">
+                    <h3>zZzzZZ</h3>
+                    <img src="img/xd.png" alt="" srcset="">               
+                </div>
+                <div class="div-skill">
+                    <h3>zZzzZZ</h3>
+                    <img src="img/xd.png" alt="" srcset="">               
+                </div>
+                <div class="div-skill">
+                    <h3>zZzzZZ</h3>
+                    <img src="img/xd.png" alt="" srcset="">               
+                </div>
+                <div class="div-skill">
+                    <h3>zZzzZZ</h3>
+                    <img src="img/xd.png" alt="" srcset="">               
+                </div>
+                <div class="div-skill">
+                    <h3>zZzzZZ</h3>
+                    <img src="img/xd.png" alt="" srcset="">               
+                </div>
+                <div class="div-skill">
+                    <h3>zZzzZZ</h3>
+                    <img src="img/xd.png" alt="" srcset="">               
+                </div>
+            </div>
+
+    </div>
+
+    <h2 class="proy">Ultimos Proyectos</h2>
+    <div class="proyectos">
+        <div class="proyect">
+            <h3>zZzZzZzZ</h3>
+            <img src="img/aea.png" alt="">
+        </div>
+        <div class="proyect">
+            <h3>zZzZzZzZ</h3>
+            <img src="img/aea.png" alt="">
+        </div>
+        <div class="proyect">
+            <h3>zZzZzZzZ</h3>
+            <img src="img/aea.png" alt="">
+        </div>
+        <div class="proyect">
+            <h3>zZzZzZzZ</h3>
+            <img src="img/aea.png" alt="">
+        </div>
+        <div class="proyect">
+            <h3>zZzZzZzZ</h3>
+            <img src="img/aea.png" alt="">
+        </div>
+        <div class="proyect">
+            <h3>zZzZzZzZ</h3>
+            <img src="img/aea.png" alt="">
+        </div>
+    </div>
+
+    
+    </body>
 </html>
