--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <h2>Hola, Mi Nombre es Gonzalo.</h2>
             <h2>Soy desarrollador Front End</h2>
             <h3>Soy un estudiante de ingeniería de sistemas apasionado
-                por el desarrollo web, backend y desarollo de software.
+                por el desarrollo web, backend y desarrollo de software.
             </h3>
         </div>
         <div class="about-img">
