--- a/index.html
+++ b/index.html
@@ -40,11 +40,9 @@
     <h2 class="acerca">Acerca de Mi</h2>
     <div class="about">
         <div class="about-name">
-            <h2>Hola, Mi Nombre es Gonzalo.</h2>
-            <h2>Soy desarrollador Front End</h2>
-            <h3>Soy un estudiante de ingeniería de sistemas apasionado
-                por el desarrollo web, backend y desarrollo de software.
-            </h3>
+            <h2>Lorem ipsum dolor sit..</h2>
+            <h2>Lorem ipsum dolor sit.</h2>
+            <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis sunt temporibus nulla recusandae placeat. </h3>
         </div>
         <div class="about-img">
             <img src="img/Designer.svg" alt="">
